# srrg2-hipe

./: CMakeLists.txt  LICENSE  README.md  package.xml
apps/: CMakeLists.txt  align_pose_graph.cpp  chordal_to_geodesic_converter.cpp  compute_metrics.cpp  geodesic_to_chordal_converter.cpp  graph_optimizer.cpp
data/ground_truth/: garage_gt.boss
data/ground_truth/boss/: parking-garage-gt.boss
data/ground_truth/g2o/: grid3D_gt.g2o  parking-garage-gt.g2o  sphere5000_gt.g2o  torus3D_gt.g2o
data/initial_guess/boss/: parking-garage.boss
data/initial_guess/g2o/: parking-garage.g2o  sphere5000.g2o  torus3D.g2o
data/initial_guess_sp/: garage.boss  parking-garage.boss
docker/: Dockerfile  README.md  docker.sh
examples/: CMakeLists.txt  bipartition_example.cpp  chordal_initialization_example.cpp  hierarchical_initialization_example.cpp  multi_partition_example.cpp  partition_covariance_projection_test.cpp  partition_manager_test.cpp  reoptimize_partitions_test.cpp
src/: CMakeLists.txt
src/chordal_types/: CMakeLists.txt  chordal_initializer.cpp  chordal_initializer.h  factors_chordal_initialization.cpp  factors_chordal_initialization.h  variables_chordal_initialization.cpp  variables_chordal_initialization.h
src/factors/: CMakeLists.txt  instances.cpp  instances.h  se3_chordal_factor.cpp  se3_chordal_factor.h  se3_langevin_factor.cpp  se3_langevin_factor.h
src/optimizer/: CMakeLists.txt  hierarchical_optimizer.cpp  hierarchical_optimizer.h  instances.cpp  instances.h
src/partitions/: CMakeLists.txt  instances.cpp  instances.h  partition.cpp  partition.h  partition_creation_utils.cpp  partition_creation_utils.h  partition_manager.cpp  partition_manager.h
src/splitting/: CMakeLists.txt  breadth_first_splitter.cpp  breadth_first_splitter.h  instances.cpp  instances.h  isoperimetrical_bipartitioner.cpp  isoperimetrical_bipartitioner.h  isoperimetrical_splitter.cpp  isoperimetrical_splitter.h  nested_dissection_splitter.cpp  nested_dissection_splitter.h  odometry_propagation.cpp  odometry_propagation.h  partitions_optimization_tree.cpp  partitions_optimization_tree.h  splitter_base.h
